# bevy_2d_fsm_anims

./: .gitignore  Cargo.toml  README.md  expanded.rs
assets/platformer/: circle.aseprite
examples/platformer/: anims.rs  main.rs
examples/quickstart/: main.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
src/: anim_mat.wgsl  body.rs  lazy.rs  lib.rs  logic.rs  man.rs  mat.rs  plugin.rs  state.rs  time.rs  traits.rs
