[package]
name = "bevy_2delight_anims"
description = "An fsm-driven 2d animation system that's _delight_ful to use"
version = "0.1.0"
edition = "2021"
authors = ["Mark Pekala <mfpekala@gmail.com>"]
exclude = ["assets/*"]
license = "MIT"
homepage = "https://github.com/dream-lake-games/bevy_2delight_anims"
repository = "https://github.com/dream-lake-games/bevy_2delight_anims"
readme = "README.md"


[workspace]
members = ["macros"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
] }
bevy_2delight_anims_macros = { path = "macros" }
paste = "1.0"

[dev-dependencies]
bevy = "0.14"
bevy-inspector-egui = "0.25.2"
bevy_ecs_ldtk = "0.10.0"

[[example]]
name = "platformer"
path = "examples/platformer/main.rs"
